fix portfolio card tag alignment

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -258,7 +258,6 @@ span.portfolio-card-divider {
   padding-top: 20px;
   position: absolute;
   bottom: 5px;
-  margin: 0px 30px;
   text-align: left;
 }
 
